# ezplot

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  generate_docs_showcases.py  pyproject.toml
examples/: demo.py
ezplot/: __init__.py  charts.py  config.py  core.py  font.py  raster.py  render.py  style.py  utils.py
tests/: test_basic.py
